@@ -507,6 +507,76 @@ parameter_list|)
 throws|throws
 name|IOException
 function_decl|;
+comment|/**    * @param directory to calculate size of    * @return size in bytes    * @throws IOException on low level IO error    */
+DECL|method|size
+specifier|public
+name|long
+name|size
+parameter_list|(
+name|Directory
+name|directory
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+return|return
+name|sizeOfDirectory
+argument_list|(
+name|directory
+argument_list|)
+return|;
+block|}
+comment|/**    * @param path to calculate size of    * @return size in bytes    * @throws IOException on low level IO error    */
+DECL|method|size
+specifier|public
+name|long
+name|size
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|get
+argument_list|(
+name|path
+argument_list|,
+name|DirContext
+operator|.
+name|DEFAULT
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|long
+name|size
+decl_stmt|;
+try|try
+block|{
+name|size
+operator|=
+name|sizeOfDirectory
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|release
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|size
+return|;
+block|}
 comment|/**    * Override for more efficient moves.    *     * Intended for use with replication - use    * carefully - some Directory wrappers will    * cache files for example.    *     * @throws IOException If there is a low-level I/O error.    */
 DECL|method|move
 specifier|public
