@@ -180,6 +180,20 @@ name|hadoop
 operator|.
 name|fs
 operator|.
+name|FsStatus
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
 name|Path
 import|;
 end_import
@@ -2542,6 +2556,137 @@ argument_list|()
 argument_list|)
 argument_list|)
 return|;
+block|}
+comment|/**    * @param directory to calculate size of    * @return size in bytes    * @throws IOException on low level IO error    */
+annotation|@
+name|Override
+DECL|method|size
+specifier|public
+name|long
+name|size
+parameter_list|(
+name|Directory
+name|directory
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|String
+name|hdfsDirPath
+init|=
+name|getPath
+argument_list|(
+name|directory
+argument_list|)
+decl_stmt|;
+return|return
+name|size
+argument_list|(
+name|hdfsDirPath
+argument_list|)
+return|;
+block|}
+comment|/**    * @param path to calculate size of    * @return size in bytes    * @throws IOException on low level IO error    */
+annotation|@
+name|Override
+DECL|method|size
+specifier|public
+name|long
+name|size
+parameter_list|(
+name|String
+name|path
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|Path
+name|hdfsDirPath
+init|=
+operator|new
+name|Path
+argument_list|(
+name|path
+argument_list|)
+decl_stmt|;
+name|FileSystem
+name|fileSystem
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|fileSystem
+operator|=
+name|FileSystem
+operator|.
+name|newInstance
+argument_list|(
+name|hdfsDirPath
+operator|.
+name|toUri
+argument_list|()
+argument_list|,
+name|getConf
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|long
+name|size
+init|=
+name|fileSystem
+operator|.
+name|getContentSummary
+argument_list|(
+name|hdfsDirPath
+argument_list|)
+operator|.
+name|getLength
+argument_list|()
+decl_stmt|;
+return|return
+name|size
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Error checking if hdfs path exists"
+argument_list|,
+name|e
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+literal|"Error checking if hdfs path exists"
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
+finally|finally
+block|{
+name|IOUtils
+operator|.
+name|closeQuietly
+argument_list|(
+name|fileSystem
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|getConfDir
 specifier|public
