@@ -80,6 +80,48 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|FileSystem
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|fs
+operator|.
+name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|hdfs
 operator|.
 name|MiniDFSCluster
@@ -97,6 +139,20 @@ operator|.
 name|index
 operator|.
 name|IndexWriter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|store
+operator|.
+name|Directory
 import|;
 end_import
 
@@ -914,6 +970,110 @@ operator|instanceof
 name|HdfsDirectoryFactory
 argument_list|)
 expr_stmt|;
+name|Directory
+name|dir
+init|=
+name|core
+operator|.
+name|getDirectoryFactory
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|long
+name|dataDirSize
+init|=
+name|core
+operator|.
+name|getDirectoryFactory
+argument_list|()
+operator|.
+name|size
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+name|FileSystem
+name|fileSystem
+init|=
+literal|null
+decl_stmt|;
+name|fileSystem
+operator|=
+name|FileSystem
+operator|.
+name|newInstance
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+argument_list|)
+operator|.
+name|toUri
+argument_list|()
+argument_list|,
+operator|new
+name|Configuration
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|long
+name|size
+init|=
+name|fileSystem
+operator|.
+name|getContentSummary
+argument_list|(
+operator|new
+name|Path
+argument_list|(
+name|core
+operator|.
+name|getDataDir
+argument_list|()
+argument_list|)
+argument_list|)
+operator|.
+name|getLength
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|size
+argument_list|,
+name|dataDirSize
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|core
+operator|.
+name|getDirectoryFactory
+argument_list|()
+operator|.
+name|release
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+block|}
 name|RefCounted
 argument_list|<
 name|IndexWriter
